[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"


[project]
name = "caenhv"
authors = [
    { name = "Luis Antonio Obis Aparicio", email = "luis.antonio.obis@gmail.com" },
]
description = "An unofficial Python package ðŸðŸ“¦ to interface with CAEN high voltage power supplies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
"Download" = "https://github.com/lobis/caen-hv/releases"
"Homepage" = "https://github.com/lobis/caen-hv"
"Bug Tracker" = "https://github.com/lobis/caen-hv/issues"

[tool.hatch.version]
path = "src/caenhv/version.py"
